syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/noueii/gonuxt-starter/internal/pb";

message Session {
  string id = 1;
  google.protobuf.Timestamp expires_at = 2;
}
